--- a/kubernetes/deployApps/nextcloud/mysqlfornextcloud.yaml
+++ b/kubernetes/deployApps/nextcloud/mysqlfornextcloud.yaml
@@ -5,6 +5,7 @@ metadata:
   name: ceph-secret
 data:
   key: QVFDekozcGI5TmcwTWhBQW53TmlQRzIxWmJTVFlLN1pKNERWekE9PQ==
+  #key from: `ceph auth get-key client.admin | base64`  
 
 ---
 apiVersion: v1
@@ -14,7 +15,7 @@ metadata:
   labels:
     app: mysqlfornextcloud
 spec:
-  clusterIP: None
+  clusterIP: None #The 'clusterIP' specify to 'None',then the Service 'mysqlfornextcloud' will resolve to mysql Pod's IP
   ports:
     - port: 3306
       protocol: TCP
